docs/k8s/Automated Service Mesh with Istio/05-06/hostname-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hostname
spec:
  hosts:
  - hostname
  - "hostname.example.com"
  gateways:
  - hostname-gateway
  http:
  - match:
    - headers:
        cookie:
          exact: user=test
    fault:
      abort:
        percent: 50
        httpStatus: 500
    route:
    - destination:
        host: hostname
        subset: v1
  - route:
    - destination:
        host: hostname
        subset: v1
